# dinamica

./: .gitignore  README.md
docker/: ROS_humble.dockerfile
docker/config/: bashrc  entrypoint.sh
docker/scripts/: build.sh  run.sh
ros2_ws/: .bash_history  .bashrc  .gitconfig
ros2_ws/.cache/Microsoft/DeveloperTools/: deviceid
ros2_ws/.cache/mesa_shader_cache/: index
ros2_ws/.config/: QtProject.conf
ros2_ws/.gnupg/: pubring.kbx  trustdb.gpg
ros2_ws/.rviz2/: persistent_settings
ros2_ws/.vscode-server/data/: machineid
ros2_ws/.vscode-server/data/CachedProfilesData/__default__profile__/: extensions.builtin.cache  extensions.user.cache
ros2_ws/.vscode-server/data/Machine/: .connection-token-e8653663e8840adaf45af01eab5c627a5af81807
ros2_ws/install/robot_description/share/ament_index/resource_index/parent_prefix_path/: robot_description
ros2_ws/install/robot_description/share/robot_description/: package.sh  package.xml
ros2_ws/install/robot_description/share/robot_description/launch/: display.launch.py
ros2_ws/install/robot_description/share/robot_description/meshes/: Asm1.cfg  Engrenagem2.stl  Estrutura2.stl  TampaLink2.stl  TampaLinkP.stl
ros2_ws/install/robot_description/share/robot_description/rviz2/: display.rviz
ros2_ws/install/robot_description/share/robot_description/urdf/: gazebo.xacro  robot_description.urdf  robot_description.xacro  soldador.control.xacro
ros2_ws/log/: latest_build
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/robot_description/config/: controllers.yaml  link2_inertia.yaml
ros2_ws/src/robot_description/launch/: gazebo.launch.py
ros2_ws/src/robot_description/meshes/: Asm1.asm  Asm1.stl  Base.stl  Bucha1.stl  Bucha2.stl  Engrenagem1.stl  Estrutura1.stl  Estrutura3.stl  FusoDeRosca.stl  Motor1.stl  Motor2.stl
ros2_ws/src/robot_description/rviz2/: display.rviz
ros2_ws/src/robot_description/urdf/: robot_description.urdf  robot_description.xacro  soldador.trans
