<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- Defines the XML schema for package format version 3 -->

<package format="3">
  <!-- The ROS 2 package definition -->

  <name>robot_description</name>
  <!-- The name of the package. In this case, it's 'robot_description' -->

  <version>0.0.0</version>
  <!-- The version of the package. It's currently set to 0.0.0 -->

  <description>TODO: Package description</description>
  <!-- A short description of what this package does. This is a placeholder for now -->

  <maintainer email="ros2_ws@todo.todo">ros2_ws</maintainer>
  <!-- The maintainer of the package, including their email. Replace with real information -->

  <license>TODO: License declaration</license>
  <!-- The license under which the package is released. This should be filled out with a valid license -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- The build system used by the package. In this case, 'ament_cmake' is the recommended build tool for ROS 2 -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- These are dependencies for automated linting and common linting checks used in ROS 2 -->

  <!-- Runtime dependencies -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <!-- These are runtime dependencies for the package. They provide functionality for publishing joint states, visualizing the robot, and working with URDF files -->
  
  <export>
    <build_type>ament_cmake</build_type>
    <!-- The build type used for the package. Here, 'ament_cmake' indicates that CMake is used as the build system -->
  </export>
</package>
